# Real-Time-Legal-aid

./: .env.example  Dockerfile.api  Dockerfile.streamlit  README.md  cloudbuild.yaml  main.py  pyproject.toml  scratch_test.py  test_api.py
dashboard/: app.py  metrics.py
data/: evaluation_dataset.json
data/processed/: embeddings.jsonl
data/raw/: Code_on_Wages_2019.txt  Consumer_Protection_Act_2019.txt  Tenant_Rights_Act.txt
src/api/: auth.py  main.py  middleware.py  routes.py  session.py
src/channels/: whatsapp.py
src/evaluation/: dataset.py  run_eval.py
src/generation/: generator.py
src/ingestion/: chunk.py  download.py  embed.py  parse.py  run.py  upload.py
src/retrieval/: retriever.py  test_query.py
