[project]
name = "legal-aid-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.138.0",
    "google-cloud-firestore>=2.27.0",
    "google-cloud-storage>=3.12.0",
    "langchain>=1.3.10",
    "langchain-google-vertexai>=3.2.4",
    "langfuse>=4.9.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pymupdf>=1.27.2.3",
    "python-dotenv>=1.2.2",
    "ragas>=0.4.3",
    "requests>=2.34.2",
    "streamlit>=1.58.0",
    "twilio>=9.10.9",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
